--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+    background: #2ecc71;
+}
+
+button {
+    outline: none;
+    border: none;
+    border-radius: 4px;
+    padding: 10px;
+    background: #e67e22;
+    color: white;
+    font-size: 16px;
+    margin: 10px;
+}
