moved vote to questions-detail page

--- a/src/app/questions/question/question-detail/choice/choice.component.html
+++ b/src/app/questions/question/question-detail/choice/choice.component.html
@@ -1,4 +1,4 @@
-<div class="container" (click)="vote()">
+<div class="container" [ngClass]="{'selected' : selected}">
   <div>{{choice.choice}}</div>
   <div class="result-container">
     <div>{{choice.votes}}</div>
