--- a/src/app/questions/question/question-detail/choice/choice.component.scss
+++ b/src/app/questions/question/question-detail/choice/choice.component.scss
@@ -1,5 +1,5 @@
 :host {
-    display: block;
+    display: inline-block;
 }
 .container {
     background: white;
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    max-width: 400px;
+    width: 400px;
     cursor: pointer;
     background: #f39c12;
     color: white;
@@ -40,4 +40,8 @@
     height: 20px;
     margin: 0;
     display: inline-block;
+}
+
+.selected {
+    background: #2c3e50;
 }
