--- a/src/app/questions/question/question-detail/question-detail.component.html
+++ b/src/app/questions/question/question-detail/question-detail.component.html
@@ -1,10 +1,13 @@
 <h1>Questions Detail</h1>
-<div *ngIf="question">
+<div *ngIf="question" class="container">
   <h3>Question: {{question.question}}</h3>
   <app-choice
     *ngFor="let choice of question.choices; let i = index"
+    (click)="select(i)"
     [choice]="choice"
     [votePercentage]="getVotePercentage(i)"
-    (voted)="updateVotes($event)"
+    [selected]="selectedIndex === i"
   ></app-choice>
+
+  <button (click)="vote()" [disabled]="selectedIndex === undefined">Save vote</button>
 </div>
