--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,5 +12,10 @@ button {
     background: #e67e22;
     color: white;
     font-size: 16px;
-    margin: 10px;
+    cursor: pointer;
+
+    &:disabled {
+        opacity: 0.5;
+        cursor: initial;
+    }
 }
