--- a/src/app/questions/question/question-detail/choice/choice.component.html
+++ b/src/app/questions/question/question-detail/choice/choice.component.html
@@ -1,10 +1,12 @@
 <div class="container" [ngClass]="{'selected' : selected}">
   <div>{{choice.choice}}</div>
   <div class="result-container">
-    <div>{{choice.votes}}</div>
-    <div>{{votePercentage}}%</div>
-    <div class="percentage-container">
-      <div [style.width.px]="votePercentage" class="percentage-fill"></div>
+    <div class="votes">{{choice.votes}}</div>
+    <div class="ranking">
+      <div class="numerical">{{votePercentage}}%</div>
+      <div class="percentage-container">
+        <div [style.width.px]="votePercentage" class="percentage-fill"></div>
+      </div>
     </div>
   </div>
 </div>
