--- a/src/app/questions/question/question-detail/question-detail.component.scss
+++ b/src/app/questions/question/question-detail/question-detail.component.scss
@@ -1,10 +1,14 @@
 app-choice {
-    &:not(:last-child) {
-        margin-bottom: 10px;
-    }
+  &:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+button {
+    width: 150px;
 }
