--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
-    background: #2ecc71;
+    background: #192a56;
+    color: white;
 }
 
 button {
@@ -13,6 +14,7 @@ button {
     color: white;
     font-size: 16px;
     cursor: pointer;
+
 
     &:disabled {
         opacity: 0.5;
